force-app/main/default/objects/Student_Enrolls__c/Student_Enrolls__c.object-meta.xml
<CustomObject>
    <description>storing student data.</description>
    <label>StudentEnroll</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>StudentID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StudentEnrolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>