force-app/main/default/objects/Student_Enrolls__c/fields/Ph_Number__c.field-meta.xml
<CustomField>
    <fullName>Ph_Number__c</fullName>
    <description>Phone number</description>
    <label>Ph_Number</label>
    <type>Phone</type>
</CustomField>