force-app/main/default/objects/Student_Enrolls__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>2</length>
    <type>Text</type>
</CustomField>