force-app/main/default/objects/Student_Enrolls__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <description>Total marks of student in all subject</description>
    <label>Total_Marks</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>